# gen/http/openapi.yaml
@@ -36,6 +36,35 @@ paths:
                     description: No Content response.
             schemes:
                 - http
+    /textures:
+        get:
+            tags:
+                - mktextr
+            summary: getTextureByCoordinates mktextr
+            operationId: mktextr#getTextureByCoordinates
+            parameters:
+                - name: worldId
+                  in: query
+                  description: WorldId
+                  required: true
+                  type: string
+                - name: x
+                  in: query
+                  description: Texture X
+                  required: true
+                  type: integer
+                - name: "y"
+                  in: query
+                  description: Texture Y
+                  required: true
+                  type: integer
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/TextureReferencePayload'
+            schemes:
+                - http
     /textures/{id}:
         get:
             tags:
@@ -64,44 +93,74 @@ definitions:
                 type: string
                 description: The texture
                 example:
-                    - 78
+                    - 67
                     - 111
-                    - 110
-                    - 32
-                    - 111
+                    - 114
                     - 112
-                    - 116
+                    - 111
+                    - 114
                     - 105
-                    - 111
-                    - 32
-                    - 109
-                    - 111
-                    - 108
-                    - 101
                     - 115
-                    - 116
+                    - 32
+                    - 110
                     - 105
+                    - 104
+                    - 105
+                    - 108
+                    - 32
                     - 97
+                    - 117
+                    - 116
                     - 101
+                    - 109
                     - 46
                 format: byte
         description: Complete task
         example:
             texture:
-                - 69
+                - 86
+                - 101
+                - 114
+                - 111
+                - 32
+                - 100
+                - 101
                 - 115
+                - 101
+                - 114
+                - 117
+                - 110
                 - 116
                 - 32
-                - 97
-                - 115
-                - 112
-                - 101
                 - 114
+                - 101
+                - 109
+                - 32
                 - 105
+                - 100
+                - 32
+                - 109
                 - 111
-                - 114
+                - 108
                 - 101
                 - 115
+                - 116
+                - 105
+                - 97
+                - 101
+                - 32
+                - 113
+                - 117
+                - 105
+                - 100
+                - 101
+                - 109
+                - 32
+                - 110
+                - 105
+                - 104
+                - 105
+                - 108
                 - 46
         required:
             - texture
@@ -112,7 +171,7 @@ definitions:
             id:
                 type: string
                 description: Unique identifier
-                example: Ab id quo.
+                example: Facere quibusdam.
         description: Texture reference
         example:
-            id: Quia deserunt sit ducimus maxime et velit.
+            id: Dolore voluptatem incidunt.
