# gen/mktextr/endpoints.go
@@ -15,21 +15,24 @@ import (
 
 // Endpoints wraps the "mktextr" service endpoints.
 type Endpoints struct {
-	GetTextureByID goa.Endpoint
-	CompleteTask   goa.Endpoint
+	GetTextureByID          goa.Endpoint
+	GetTextureByCoordinates goa.Endpoint
+	CompleteTask            goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "mktextr" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		GetTextureByID: NewGetTextureByIDEndpoint(s),
-		CompleteTask:   NewCompleteTaskEndpoint(s),
+		GetTextureByID:          NewGetTextureByIDEndpoint(s),
+		GetTextureByCoordinates: NewGetTextureByCoordinatesEndpoint(s),
+		CompleteTask:            NewCompleteTaskEndpoint(s),
 	}
 }
 
 // Use applies the given middleware to all the "mktextr" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.GetTextureByID = m(e.GetTextureByID)
+	e.GetTextureByCoordinates = m(e.GetTextureByCoordinates)
 	e.CompleteTask = m(e.CompleteTask)
 }
 
@@ -39,6 +42,15 @@ func NewGetTextureByIDEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*GetTextureByIDPayload)
 		return s.GetTextureByID(ctx, p)
+	}
+}
+
+// NewGetTextureByCoordinatesEndpoint returns an endpoint function that calls
+// the method "getTextureByCoordinates" of service "mktextr".
+func NewGetTextureByCoordinatesEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*GetTextureByCoordinatesPayload)
+		return s.GetTextureByCoordinates(ctx, p)
 	}
 }
 
